app/client/stylesheets/smartervote.import.less
/*
 * Main app panel that contains all parts
 * covers the full viewport
 */
 
 body {
   overflow-y: scroll;
 }
 
#smartervote {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  min-height: 99.9%;
  //bottom: 0;
  //overflow: hidden;
  
  
  background: white;
  
  font-family: 'BuenosAires', sans-serif;
	font-weight: normal;
  
  /*
   * Reset bootstrap buttons
   */
  .btn {
    background-color: transparent;
    border: 0;
    border-radius: 0;
    color: black;
    
    &:focus,
    &:hover,
    &:active {
      outline: 0;
      background-color: transparent;
      box-shadow: none;
      color: black;
    }
    
    &:hover,
    &:focus {
      background-color: rgba(0, 0, 0, 0.04);
    }
    
    &:focus {
      color: #444;
      text-decoration: underline;
    }
    
    &.active {
      box-shadow: none;
      text-decoration: underline;
    }
  }
  
  a {
   color: black;
  }
}

/*
 * App Logo, menu and language selection
 */
#app-header {
  position: absolute;
  left: 0;
  top: 0;
  right: 0;
  z-index: 900;

  padding: 10px;
  
  .site-menu-toggle {
    float: right;
    width: 22px;
    height: 12px;
    margin: 3px 0;
  }
  
  @media only screen and (min-width: @screen-sm-min) {
    position: fixed;
    left: 0;
    top: 0;
    right: auto;
    
    padding: 1em;
    
    .site-menu-toggle {
      float: none;
      width: 44px;
      height: 24px;
      margin: 0 1em;
    }
  }
}

.languages {
  display: inline-block;
  
  span {
    display: inline-block;
    padding: 0 0.5rem;
  }
}

/*
 * Container to the main svg element
 */
#bubbles-container {
  position: fixed;
  left: 0;
  right: 13px;
  top: 0;
  bottom: 0;
  
  .node {
    opacity: 0.2;
    transition: opacity @transition-duration-dim;
  }

  .node.selected {
    opacity: 1.0;
  }
  
  .link {
      stroke-width: 0.1px !important;
  }
  
  &.dim {
    .node {
      opacity: 1;
    }
  }
  
  @media only screen and (min-width: @screen-sm-min) {
    .node {
      opacity: 1;
    }
  }
}

/*
 * Transition for content dimming effect
 * when slider is dragged in mobile layout
 */
#header,
.answers,
#question-navigation,
.nouislider-label,
#reset {
  transition: opacity @transition-duration-dim, transform @transition-duration-dim;
}

/*
 * Panel for questions and answering
 * positioned on top of bubble network
 */
#content {
  position: absolute;
  z-index: 950;
  top: 0;
  left: 10px;
  right: 40px;
  
  box-sizing: border-box;
  min-width: 270px;
  min-height: 99.9%;
  padding-top: 30px;
  
  img {
    max-width: 100%;
  }
  
  // Dimming content only on mobile/small
  @media only screen and (max-width: @screen-sm-min) {
    &.dim {
      #header,
      .answers,
      #question-navigation,
      .nouislider-label,
      #reset {
        opacity: 0;
        -webkit-transform: scale(0.95);
        -ms-transform: scale(0.95);
        transform: scale(0.95);
      }
    }
  }
  
  @media only screen and (min-width: @screen-sm-min) {
    top: 0;
    right: 45px;
    left: auto;
    width: 33%;
    padding-top: 0;
  }
  
  /*
   * Question index, main text and "more info"
   * ? rename, e.g. #question?
   */
  #header {
    padding-top: 1em;
    
    -webkit-hyphens: auto;
    -moz-hyphens: auto;
    -ms-hyphens: auto;
    hyphens: auto;
    
    .control-label {
      font-size: 1.1em; 
      
      @media only screen and (min-width: @screen-md-min) {
        font-size: 2vw; // of viewport width
      }
    }
    
    .info {
      margin: 15px 0px;
    }
  }
}

#question-index {
  display: inline-block;
  width: 1em;
}

#toggle-favorite {
  position: relative;
  top: -0.1em;
  
  height: 1em;
  width: 1.2em;
  background-image: url(/img/icon-star.svg);
  background-position:  50% 50%;
  background-repeat: no-repeat;
  background-size: contain;
  
  &:hover {
    background-color: transparent !important;
    background-image: url(/img/icon-star-hover.svg);
  }
  
  &.active {
    background-image: url(/img/icon-star-active.svg);
  }
}

/*
 * Contains actual answering controls and question navigation
 * tacked to bottom of #content
 */
.footer {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  padding-top: @controls-vertical-padding-min;
}

/*
 * Answer buttons (yes/no || max/min)
 */
.answers {
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  
  button {
    -webkit-flex: 1 0 50%;
    -ms-flex: 1 0 50%;
    flex: 1 0 50%;
    
    height: @height-answers;
    min-height: 7rem;
    padding: 0;
    overflow: hidden;
    text-overflow: ellipsis;
    
    font-weight: bold;
    font-size: 1em; // of viewport width
    
    &.max {
      text-align: left;
    }
    
    &.min {
      text-align: right;
    }
    
    span {
      display: block;
      overflow: visible;
      //overflow: hidden;
      text-overflow: ellipsis;
      
      font-size: 2.2em;
      line-height: 0.9;
      
      text-transform: uppercase;
    }
  }
  
  @media only screen and (min-width: @screen-md-min) {
    button {
      font-size: 2vw; // of viewport width
      
      span {
        font-size: 4vw; // of viewport width
      }
    }
  }
}

#question,
#evaluation {
  box-sizing: border-box;
  min-height: 99.9%;
}

/*
 * Link to the page showing all questions
 */
#show-all-questions {
  float: right;
}

.showInfo,
.hideInfo {
  font-size: 1em;
  
  @media only screen and (min-width: @screen-lg-min) {
    font-size: 1.2vw;
  }
}

/*
 * Generic styles for all control groups
 */
.control-section {
  -webkit-flex-flow: wrap;
  -ms-flex-wrap: wrap;
  flex-flow: wrap;
  
  border-top: @border-default;
  
  &:before,
  &:after {
    display: block;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
    
    height: @controls-vertical-padding-base;
    min-height: @controls-vertical-padding-min;
    
    content: ' ';
  }
}

/*
 * Question navigation
 * i.e. previous/next and go to Score
 */
#question-navigation {
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  
  button {
    -webkit-flex: 0.25 1 24%;
    -ms-flex: 0.25 1 24%;
    flex: 0.25 1 24%;
    
    padding: 0;
    
    line-height: @height-question-nav;
    min-height: 4.5rem;
  }
  
  #back,
  #gotoQuestions {
    padding-left: 20px;
    background-image: url(/img/arrow-left.svg);
    background-position: 0 50%;
    background-repeat: no-repeat;
    background-size: 13px 26px;
    text-align: left;
  }
  
  #next {
    padding-right: 20px;
    background-image: url(/img/arrow-right.svg);
    background-position: 100% 50%;
    background-repeat: no-repeat;
    background-size: 13px 26px;
    text-align: right;
  }
  
  #gotoEvaluation {
    -webkit-flex: 1 1 auto;
    -ms-flex: 1 1 auto;
    flex: 1 1 auto;
    
    border: @border-default;
    border-top: 0;
    border-bottom: 0;
    
    font-weight: bold;
    
    @media only screen and (min-width: @screen-md-min) {
      font-size: 1.2em;
    }
  }
}

/*
 * Button for resetting all answers
 */
#reset {
  width: 100%;
  padding: 0;
  
  font-size: 0.9em;
  line-height: @height-reset-button;
  min-height: 3rem;
  
  &:hover {
    color: red !important;
  }
  
  &:before {
    display: inline-block;
    width: 20px;
    height: 1em;
    background: transparent url(/img/icon-trash.svg) 50% 50% no-repeat;
    content: ' ';
  }
  
  &:after {
    display: block;
    -webkit-flex: 0 0 100%;
    -ms-flex:  0 0 100%;
    flex: 0 0 100%;
    
    height: @controls-vertical-padding-base;
    min-height: @controls-vertical-padding-min;
    
    content: ' ';
  }
}

/*
 * Score panel
 */
#evaluation {
  background: white;
  
  .control-section {
    border-top: 0;
  }
}

/*
 * Common section styles
 */
.final-score,
.sharing,
.account,
.topics,
.compare {
  margin-bottom: 2em;
  
  h2 {
    margin: 0 0 0.1em;
    color: black;
    font-size: 1em;
  }
}

.final-score {
  margin-bottom: 2vh;

  span {
    display: block;
    color: @color-evaluation;
    
    font-weight: bold;
    font-size: 6vw;
    line-height: 7vw;
    text-align: center;
  }
}


.sharing {
  .preview-wrapper {
    position: relative;
    min-height: 14rem;
    margin: 0.3rem 0;
    padding: 0.5rem;
    background: white;
    //border-radius: 2.4rem;
  }
  
  #mybubbles-preview {
    box-sizing: border-box;
    width: 100%;
    padding-left: 5rem;
  }
  
  .share-buttons-wrapper {
    position: absolute;
    top: 0.5rem;
    left: 0.5rem;
    width: 5rem;
  }
  
  .share-buttons {
    float: left;
  }

  .fb-share,
  .tw-share,
  .url-copy {
    display: inline-block;
    width: 4rem;
    height: 4rem;
    margin-bottom: 0.5rem;
    padding: 0;
    
    border-radius: 50% !important;
    background-color: black !important;
    
    font-size: 0;
    text-align: center;
    
    i {
      font-size: 2.5rem;
      line-height: 4rem;
      color: white;
    }
    
    &:hover {
      background-color: #777 !important;
    }
  }
  
  .fb-share {
    i {
      position: relative;
      top: 0.1rem;
    }
  }
  
  .tw-share {
    i {
      position: relative;
      top: 0.1rem;
      left: 0.1rem;
    }
  }
  
  .url-copy {
    i {
      position: relative;
      top: 0.1rem;
      transform: scale(0.9);
    }
  }
}
  


/*
 * Login Buttons Dropdown
 */
#evaluation {
  #login-dropdown-list {
    list-style: none;
    
    .dropdown-menu {
      position: static;
      //display: block !important; // testing
      min-width: auto;
      width: 100%;
      margin-bottom: 2em;
      padding: 0;
      
      background: transparent;
      border: 0;
      border-radius: 0;
      box-shadow: none;
    }
    

    
    #login-email,
    #login-password,
    #forgot-password-email {
      height: 2.5em;
      padding: 0.2em 0 0;
      
      background-color: rgba(0, 0, 0, 0.04);
      color: black;
      border-radius: 0;
      border: 0;
      border-bottom: 1px solid black;
      box-shadow: none;
      
      line-height: 2.5em;
      
      &:focus {
        background-color: white;
      }
    }
    
    #login-email {
      margin-bottom: 0;
    }
    
    .btn {
      //margin-top: 0;
      background-color: rgba(0,255,255, 0.5);
    }
    
    // Selectors have to separate
    ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
      color: @color-placeholder;
    }
    :-moz-placeholder { /* Firefox 18- */
      color: @color-placeholder;
    }
    ::-moz-placeholder { /* Firefox 19+ */
      color: @color-placeholder;
      opacity: 1;
    }
    :-ms-input-placeholder { /* IE 10+ */
      color: @color-placeholder;
    }
    ::-ms-input-placeholder { /* Edge */
      color: @color-placeholder;
    }
  }
}

.topics .topic,
.compare .person-of-interest {
  width: 100%;
  padding: 0;
  
  line-height: 2em;
  text-align: left;

  &:before {
    display: inline-block;
    position: relative;
    top: 0.3em;
    
    box-sizing: border-box;
    height: 1.5em;
    width: 1.5em;
    margin-right: 0.2em;
    
    border: 2px solid rgba(0,0,0, 0.8);
    border-radius: 50%;
    
    content: ' ';
  }
      
  &.active {
    text-decoration: none !important;
    
    &:before {
      background-image: url(/img/icon-checkmark.svg);
      background-repeat: no-repeat;
      background-position: 50% 50%;
      background-size: 50%;
    }
  }
}



/*
 * Score gauge on left side of the view
 */
#score-gauge {
  display: none;
  position: fixed;
  bottom: 50%;
  transition: bottom 0.3s ease;
  height: 52px;
  padding-left: 32px;
  
  background-image: url(/img/arrow-right.svg);
  background-position: 0 50%;
  background-repeat: no-repeat;
  background-size: 26px 52px;
  
  line-height: 52px;
  
  @media only screen and (min-width: @screen-sm-min) {
    display: block;
  }
}

.dropdown-backdrop {
  position: static;
}

